NNO-12402 При использовании разных connection-url соединения к бд остаются висеть в состоянии idle